--- a/ProConsulta/Components/Layout/NavMenu.razor
+++ b/ProConsulta/Components/Layout/NavMenu.razor
@@ -1,10 +1,10 @@
 ﻿@implements IDisposable
-
+f
 @inject NavigationManager NavigationManager
 
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
+    <MudNavLink Href="pacientes" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People">Pacientes</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudNavLink Href="auth" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lock">Auth Required</MudNavLink>
     <AuthorizeView>
