--- a/ProConsulta/Components/Layout/NavMenu.razor
+++ b/ProConsulta/Components/Layout/NavMenu.razor
@@ -5,6 +5,7 @@ f
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="pacientes" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People">Pacientes</MudNavLink>
+    <MudNavLink Href="medicos" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person4">Médicos</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudNavLink Href="auth" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lock">Auth Required</MudNavLink>
     <AuthorizeView>
