--- a/ProConsulta/Components/Layout/MainLayout.razor
+++ b/ProConsulta/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager Navigation
 
 <MudThemeProvider IsDarkMode="_isDark" />
 <MudPopoverProvider />
@@ -20,6 +21,11 @@
             {
                 <MudIconButton @onclick="ThemeToggle" Icon="@Icons.Material.Filled.DarkMode" Color="Color.Inherit" />
             }
+
+            <AuthorizeView>
+                <MudIconButton @onclick="LogOff" Icon="@Icons.Material.Filled.ExitToApp"  Color="Color.Inherit"/>
+            </AuthorizeView>
+
         </MudStack>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
@@ -49,6 +55,11 @@
     private void ThemeToggle()
     {
         _isDark = !_isDark;
+    }
+
+    private void LogOff()
+    {
+        Navigation.NavigateTo("/Account/Manager/logout");
     }
 
 }
