--- a/ProConsulta/Components/Account/Pages/Register.razor
+++ b/ProConsulta/Components/Account/Pages/Register.razor
@@ -17,15 +17,15 @@
 
 <PageTitle>Register</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">Register</MudText>
+<MudText Typo="Typo.h3" GutterBottom="true" Align="Align.Center">Register</MudText>
 
-<MudGrid>
+<MudGrid Justify="Justify.Center">
     <MudItem md="6">
         <StatusMessage Message="@Message" />
         <EditForm Model="Input" asp-route-returnUrl="@ReturnUrl" method="post" OnValidSubmit="RegisterUser" FormName="register">
             <DataAnnotationsValidator />
 
-            <MudText Typo="Typo.body1" GutterBottom="true">Create a new account.</MudText>
+            <MudText Typo="Typo.body1" GutterBottom="true" Align="Align.Center">Create a new account.</MudText>
 
             <MudGrid>
                 <MudItem md="12">
@@ -48,10 +48,6 @@
                 </MudItem>
             </MudGrid>
         </EditForm>
-    </MudItem>
-    <MudItem md="6">
-        <MudText Typo="Typo.body1" GutterBottom="true">Use another service to register.</MudText>
-        <ExternalLoginPicker />
     </MudItem>
 </MudGrid>
 
