--- a/ProConsulta/Components/Pages/Agendamentos/Index.razor
+++ b/ProConsulta/Components/Pages/Agendamentos/Index.razor
@@ -36,6 +36,7 @@
                 <MudFab Size="Size.Small"
                         @onclick="@(() => DeleteAgendamento(agendamento))"
                         StartIcon="@Icons.Material.Filled.Delete"
+                        hidden="@HideButtons"
                         Color="Color.Error" />
             </MudStack>
         </MudPaper>
