--- a/ProConsulta/Components/Pages/Medicos/Index.razor
+++ b/ProConsulta/Components/Pages/Medicos/Index.razor
@@ -28,12 +28,14 @@
                 <MudStack Row>
                     <MudFab Size="Size.Small"
                             Label="Editar"
+                            hidden="@HideButtons"
                             @onclick="@(() => GoToUpdate(context.Item.Id))"
                             StartIcon="@Icons.Material.Filled.Edit"
                             Color="Color.Success"></MudFab>
 
                     <MudFab Size="Size.Small"
                             Label="Excluir"
+                            hidden="@HideButtons"
                             @onclick="@(() => DeleteMedicoAsync(context.Item))"
                             StartIcon="@Icons.Material.Filled.Delete"
                             Color="Color.Error"></MudFab>
